src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Acao__c</fullName>
        <label>Ação</label>
        <picklist>
            <picklistValues>
                <fullName>Posicionamento final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para processamento gerar a troca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para comercial validar similar escolhido pelo cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente decidiu cancelar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posicionamento final | Fechar fluxo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agencia__c</fullName>
        <label>Agência</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_solucionadora__c</fullName>
        <label>Área solucionadora</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_aceita_solucao__c</fullName>
        <label>Cliente aceita solução ?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cliente_aceitou_sug_de_produto_similar__c</fullName>
        <label>Cliente aceitou sug de produto similar</label>
        <picklist>
            <picklistValues>
                <fullName>Escolheu outro produto similar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deseja trocar ou cancelar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deseja esperar o mesmo produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cliente_desejaDivCD__c</fullName>
        <label>Cliente deseja?</label>
        <picklist>
            <picklistValues>
                <fullName>Verificar outra opção de similar ou enviar para validação da escolha do cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trocar com dados do novo produto | Gerar troca simbólica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cliente_deseja__c</fullName>
        <label>Cliente deseja?</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelar com pagamento via cartão | Ativo gerar cancelamento ML Admin | Fechar fluxo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trocar | Ativo gerar troca ML Admin e enviar para processar venda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelar com pagamento via boleto/débito on | Enviar dados para restituição</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Como_ficou_resolvida_a_pendencia__c</fullName>
        <label>Como ficou resolvida a pendência?</label>
        <picklist>
            <picklistValues>
                <fullName>Enviar para CD350 solucionar a pendência</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechar fluxo | Cliente confirmou recebimento do pedido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conseguiu_contato_com_o_cliente__c</fullName>
        <label>Conseguiu contato com o cliente?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim  (PREENCHER PRÓXIMA PERGUNTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Enviar e-mail para o cliente com posição</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_de_Inicio__c</fullName>
        <label>Data de Inicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Id_da_Resolucao__c</fullName>
        <label>Id da Resolução</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacoes_necessarias_para_correcao_do__c</fullName>
        <label>Info necessárias para correção dos dados</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Resolucao__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;
&amp;  Id_da_Resolucao__c , 
&quot;Resolução do Caso&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Resolução</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NecessarioRetornarParaProcessamento__c</fullName>
        <label>Necessário retornar para processamento?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nome_do_Banco__c</fullName>
        <label>Nome do Banco</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_da_Resolucao__c</fullName>
        <label>Número da Resolução</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_da_conta__c</fullName>
        <label>Número da conta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_da_troca_cancelamento_simbolico__c</fullName>
        <label>Número da troca / cancelamento simbólico</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_que_ficou_resolvido__c</fullName>
        <label>O que ficou resolvido?</label>
        <picklist>
            <picklistValues>
                <fullName>Reenviar produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente decidiu cancelar pedido | Foi aberta OC | Solicitar SIM e encerrar fluxo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechar fluxo | Cliente confirmou recebimento do produto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Similar_escolhido_pelo_cliente__c</fullName>
        <label>Similar escolhido pelo cliente</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solucao_Satisfaz__c</fullName>
        <label>Solução Satisfaz?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Tarefa__c</fullName>
        <label>Status Tarefa</label>
        <picklist>
            <picklistValues>
                <fullName>Em tratativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Em fila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tarefa_Respondida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarefa Respondida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_da_conta__c</fullName>
        <label>Tipo da conta</label>
        <picklist>
            <picklistValues>
                <fullName>Corrente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poupança</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valor_total__c</fullName>
        <label>Valor total</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>